corrected anchor links so it navigates to different sections

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav class='navContainer'>
             <span>CMP</span>
             <ul class='linkContainer'>
-                <li href="#About">About</li>
-                <li href="#Work">Work</li>
-                <li href="#Contact">Contact</li>
-                <li herf="#Resume">Resume</li>
+                <li><a href="#About">About</a></li>
+                <li><a href="#Work">Work</a></li>
+                <li><a href="#Contact">Contact</a></li>
+                <li><a herf="#Resume">Resume</a></li>
             </ul>
         </nav>
     </header>
