added contact info

--- a/index.html
+++ b/index.html
@@ -27,21 +27,38 @@
             <h1>About Me</h1>
             <p> My name is Christina and I am a student of the UCF Web Development BootCamp. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio beatae, nemo dicta iusto quos sapiente recusandae dignissimos soluta magni a, qui ullam eum minima! Sequi quos ratione, voluptatem, minus eos voluptates alias animi maxime officiis reprehenderit odio numquam exercitationem illo, unde consequatur! Tenetur eos porro ut soluta iste vitae unde.</p>
         </div>
+
         <div class="bg"></div>
+
         <div id="Work">
             <h1>Work</h1>
-            <div class="portofolio">
-                <div id="pro1"></div>
-                <div id="pro2"></div>
-                <div id="pro3"></div>
-                <div id="pro4"></div>
-                <div id="pro5"></div>
+
+            <div class="portfolio">
+                <div class="largeImg blueBorder"><div class='title'>IAMBORED</div><a href='https://christianflows.github.io/IAMBORED/' target='_blank' rel= 'noreferrer noopener' id="pro1"></a></div>
+
+                <div class="smallImg">
+                    <div class="blueBorder"><div class='smTitle'>Horiseon</div><a href='https://cpagan415.github.io/horiseon-website.github.io/Develop/index.html' target='_blank' rel= 'noreferrer noopener' id='pro2' ></a></div>
+                    <div class="blueBorder"><div class='smTitle'>Password-Generator</div><a href='https://cpagan415.github.io/password-generator/' target='_blank' rel= 'noreferrer noopener' id="pro3"></a></div>
+                </div>
+
+                <div class="smallImg2">
+                    <div class="blueBorder"><div class='smTitle'>Weather Dashboard</div><a href='https://cpagan415.github.io/weather-dashboard/' target='_blank' rel= 'noreferrer noopener' id="pro4" ></a></div>
+                    <div class="blueBorder"><div class='smTitle'>Future Project</div><a href="" id="pro5" ></a></div>
+                </div>
+
             </div>
         </div>
+
         <div class="bg"></div>
         <div id="Contact">
             <h1>Contact</h1>
-          
+            <div class='contactContainer'>
+                <ul class='contactInfo'>
+                    <li><a href='https://www.linkedin.com/in/christina-pagan-19889b1aa/' target='_blank' rel= 'noreferrer noopener'>LinkedIn</a></li>
+                    <li><a href='https://www.github.com/cpagan415' target='_blank' rel= 'noreferrer noopener'>Github</a></li>
+                    <li>Cell: 000-000-0000</li>
+                </ul>
+            </div>
         </div>
         <div class="bg"></div>
     </div>
