Updated portfolio with project

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <div class="smallImg2">
                     <div class="blueBorder"><div class='smTitle'>Weather Dashboard</div><a href='https://cpagan415.github.io/weather-dashboard/' target='_blank' rel= 'noreferrer noopener' id="pro4" ></a></div>
-                    <div class="blueBorder"><div class='smTitle'>Water Xchange</div><a href="https://sleepy-headland-09517.herokuapp.com/" target='blank' rel='noreferrer noopener' id="pro5" ></a></div>
+                    <div class="blueBorder"><div class='smTitle'>Water Xchange</div><a href="https://waterwaysrentals.herokuapp.com/" target='blank' rel='noreferrer noopener' id="pro5" ></a></div>
                 </div>
 
             </div>
